--- a/test.html
+++ b/test.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>合同会社WaJu | 公式ホームページ</title>
 
   <!-- SEO / OGP -->
@@ -44,16 +44,25 @@
     gtag('config', 'G-ZHLJ5K19ZE');
   </script>
 
-  <!-- Base styles -->
+  <!-- 基本スタイル補正（スライダー） -->
   <style>
     html, body { margin: 0; padding: 0; }
-    /* Hero slider */
     #hero-slider { display: flex; transition: transform 0.8s ease-in-out; }
     #hero-slider > img { flex: 0 0 100%; width: 100%; display: block; object-fit: cover; }
-    /* SnapWidget */
+    /* SnapWidget 基本サイズ */
     .snapwidget-widget { width: 100% !important; max-width: 600px; height: 220px; }
+    /* スマホ時のみ SNS カードをフル幅＆フラット化 */
     @media (max-width: 640px) {
-      #sns iframe.snapwidget-widget { width: 100% !important; height: 160px !important; }
+      #sns .bg-white {
+        width: 100% !important;
+        margin-left: 0 !important;
+        margin-right: 0 !important;
+        border-radius: 0 !important;
+        box-shadow: none !important;
+        padding-left: 0.75rem !important;
+        padding-right: 0.75rem !important;
+      }
+      #sns iframe.snapwidget-widget { height: 160px !important; }
     }
   </style>
 </head>
@@ -89,9 +98,13 @@
           <img src="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/wjhp0004.png" alt="About" class="rounded-xl shadow-lg"/>
           <div>
             <h3 class="text-3xl font-bold text-gray-800 mb-6 border-l-4 border-waju-accent pl-3">社会に貢献する、新たな価値創造へ</h3>
-            <p class="text-lg text-gray-700 leading-relaxed mb-6">社会福祉の一環として、介護業界の時間的・金銭的負担を軽減する事業からスタートし、将来的には幅広い社会的支援ができる企業を目指しています。</p>
-            <p class="text-lg text-gray-700 leading-relaxed mb-8 italic">絶えず前進するための <strong>Walk</strong>、そして躍進するための <strong>Jump</strong> を心掛け、社会に貢献していきます。</p>
-            <a href="/about.html" class="inline-block px-8 py-3 bg-waju-primary text-white font-semibold rounded-full shadow-lg hover:bg-blue-700 transition">企業理念を詳しく見る</a>
+            <p class="text-lg text-gray-700 leading-relaxed mb-6">
+              社会福祉の一環として、介護業界の時間的・金銭的負担を軽減する事業からスタートし、将来的には幅広い社会的支援ができる企業を目指しています。
+            </p>
+            <p class="text-lg text-gray-700 leading-relaxed mb-8 italic">
+              絶えず前進するための <strong>Walk</strong>、そして躍進するための <strong>Jump</strong> を心掛け、社会に貢献していきます。
+            </p>
+            <a href="about.html" class="inline-block px-8 py-3 bg-waju-primary text-white font-semibold rounded-full shadow-lg hover:bg-blue-700 transition">企業理念を詳しく見る</a>
           </div>
         </div>
       </div>
@@ -107,12 +120,18 @@
           </div>
           <div class="md:order-1">
             <h3 class="text-3xl font-bold text-gray-800 mb-6 border-l-4 border-waju-accent pl-3">介護・福祉業界の課題をオンラインで解決「CARELAY（ケアレイ）」</h3>
-            <p class="text-lg text-gray-700 leading-relaxed mb-6">高齢者介護サービス事業者や障害福祉サービス事業者の求人・営業・連携の問題をオンラインで解決するプラットフォームです。</p>
-            <p class="text-lg text-gray-700 leading-relaxed mb-6">このサービスは、業界の持続可能な発展をサポートするため、他にはない圧倒的な低コストでご提供しています。</p>
+            <p class="text-lg text-gray-700 leading-relaxed mb-6">
+              高齢者介護サービス事業者や障害福祉サービス事業者の求人・営業・連携の問題をオンラインで解決するプラットフォームです。
+            </p>
+            <p class="text-lg text-gray-700 leading-relaxed mb-6">
+              このサービスは、業界の持続可能な発展をサポートするため、他にはない圧倒的な低コストでご提供しています。
+            </p>
             <div class="bg-waju-accent text-white p-4 rounded-lg inline-block shadow-lg mb-8 transform rotate-[-2deg] hover:rotate-0 transition">
               <p class="text-2xl font-black">圧倒的な低コスト <span class="text-4xl">5,500円</span>/月</p>
             </div>
-            <a href="/service.html" class="inline-block px-8 py-3 bg-waju-primary text-white font-semibold rounded-full shadow-lg hover:bg-blue-700 transition">サービス詳細を見る</a>
+            <a href="service.html" class="inline-block px-8 py-3 bg-waju-primary text-white font-semibold rounded-full shadow-lg hover:bg-blue-700 transition">
+              サービス詳細を見る
+            </a>
           </div>
         </div>
       </div>
@@ -123,11 +142,11 @@
       <div class="max-w-6xl mx-auto px-6">
         <h2 class="text-4xl font-extrabold text-center text-waju-primary mb-12 relative after:content-[''] after:block after:w-16 after:h-1 after:bg-waju-accent after:mx-auto after:mt-2">YouTube</h2>
         <div class="grid md:grid-cols-2 gap-8">
-          <div class="bg-white w-screen sm:w-auto mx-0 sm:mx-auto rounded-none sm:rounded-xl shadow-none sm:shadow-2xl overflow-hidden p-4">
+          <div class="bg-white rounded-xl shadow-2xl overflow-hidden p-4">
             <p class="text-lg font-semibold text-gray-800 mb-3 text-center">会社概要動画</p>
             <iframe class="w-full h-[300px] rounded-lg shadow-inner" src="https://www.youtube.com/embed/CjgbFC64qOk" title="会社概要動画" frameborder="0" allowfullscreen></iframe>
           </div>
-          <div class="bg-white w-screen sm:w-auto mx-0 sm:mx-auto rounded-none sm:rounded-xl shadow-none sm:shadow-2xl overflow-hidden p-4">
+          <div class="bg-white rounded-xl shadow-2xl overflow-hidden p-4">
             <p class="text-lg font-semibold text-gray-800 mb-3 text-center">サービス概要動画</p>
             <iframe class="w-full h-[300px] rounded-lg shadow-inner" src="https://www.youtube.com/embed/WqQh-Ok9kjo" title="サービス概要動画" frameborder="0" allowfullscreen></iframe>
           </div>
@@ -140,17 +159,19 @@
       <h2 class="text-4xl font-extrabold text-waju-primary mb-12 text-center relative after:content-[''] after:block after:w-16 after:h-1 after:bg-waju-accent after:mx-auto after:mt-2">SNS</h2>
 
       <!-- Instagram -->
-      <div class="bg-white p-0 sm:p-6 rounded-none sm:rounded-2xl shadow-none sm:shadow-2xl border-t-4 border-pink-500 w-screen sm:w-auto mx-0 sm:mx-auto mb-8 sm:mb-10 text-center">
+      <div class="bg-white p-0 sm:p-6 rounded-none sm:rounded-2xl shadow-none sm:shadow-2xl border-t-4 border-pink-500 w-full sm:w-auto mx-0 sm:mx-auto mb-8 sm:mb-10 text-center">
         <p class="text-3xl mb-2 pt-4">📸</p>
-        <h3 class="text-xl font-bold text-gray-800 mb-4">Instagram <span class="text-pink-500">@waju.llc</span></h3>
+        <h3 class="text-xl font-bold text-gray-800 mb-4">
+          Instagram <span class="text-pink-500">@waju.llc</span>
+        </h3>
         <div class="rounded-xl overflow-hidden shadow-inner flex justify-center">
           <iframe src="https://snapwidget.com/embed/1109476" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" title="Posts from Instagram"></iframe>
         </div>
         <a href="https://www.instagram.com/waju.llc/" target="_blank" rel="noopener" class="mt-4 inline-block text-pink-600 hover:text-pink-700 font-semibold transition pb-4">Instagramを見る →</a>
       </div>
 
-      <!-- Others -->
-      <div class="bg-white p-0 sm:p-6 rounded-none sm:rounded-2xl shadow-none sm:shadow-2xl border-t-4 border-blue-500 w-screen sm:w-auto mx-0 sm:mx-auto text-center">
+      <!-- その他のSNS -->
+      <div class="bg-white p-0 sm:p-6 rounded-none sm:rounded-2xl shadow-none sm:shadow-2xl border-t-4 border-blue-500 w-full sm:w-auto mx-0 sm:mx-auto text-center">
         <h3 class="text-lg font-bold text-gray-800 mb-4 border-b pb-3 pt-4">その他のSNS</h3>
         <div class="flex flex-wrap justify-center gap-6 sm:gap-8 pb-4">
           <a href="https://www.youtube.com/@WaJuLLC" target="_blank" class="flex flex-col items-center group">
@@ -223,7 +244,7 @@
 
   <footer id="site-footer"></footer>
 
-  <!-- 外部スクリプト -->
+  <!-- 外部スクリプト（失敗しても他が止まらないように onerror で警告のみ） -->
   <script defer src="env.js" onerror="console.warn('env.js failed to load')"></script>
   <script defer type="module" src="hf.js" onerror="console.warn('hf.js failed to load')"></script>
 
@@ -240,7 +261,7 @@
         const {data,error}=await sb.from("articles").select("title,category,created_at,slug").order("created_at",{ascending:false}).limit(3);
         if(error||!data){newsList.innerHTML="<p class='text-center text-gray-500'>取得できませんでした。</p>";return;}
         newsList.innerHTML=data.map(a=>`
-          <a href="/blog-detail.html?slug=${a.slug}" class="block p-4 bg-waju-light hover:bg-waju-primary hover:text-white rounded-lg shadow-md transition">
+          <a href="blog-detail.html?slug=${a.slug}" class="block p-4 bg-waju-light hover:bg-waju-primary hover:text-white rounded-lg shadow-md transition">
             <div class="flex flex-col sm:flex-row justify-start items-start sm:items-center">
               <div class="flex items-center space-x-3">
                 <span class="text-sm text-gray-500">${formatDate(a.created_at)}</span>
