--- a/service.html
+++ b/service.html
@@ -61,7 +61,7 @@
     <!-- STOP THE WASTE (Problem/Challenge Section) -->
     <section class="py-20 bg-white">
       <div class="max-w-6xl mx-auto px-6">
-        <h2 class="text-4xl font-extrabold text-center text-waju-primary mb-12 relative after:content-[''] after:block after:w-16 after:h-1 after:bg-waju-accent after:mx-auto after:mt-2">課題</h2><br><h3>STOP THE WASTE.</h3>
+        <h2 class="text-4xl font-extrabold text-center text-waju-primary mb-12 relative after:content-[''] after:block after:w-16 after:h-1 after:bg-waju-accent after:mx-auto after:mt-2">課題<br>STOP THE WASTE.</h2>
         <p class="text-center text-lg text-gray-700 mb-10">介護現場を15年以上経験した代表の実体験に基づき、運営側の「ムダ」を徹底的に排除します。</p>
 
         <div class="grid md:grid-cols-3 gap-8">
