--- a/service.html
+++ b/service.html
@@ -37,6 +37,14 @@
       }
     }
   </script>
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZHLJ5K19ZE"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-ZHLJ5K19ZE');
+  </script>
 </head>
 <body id="page-body" class="font-sans bg-gray-50">
   <header id="site-header"></header>
