--- a/connect.html
+++ b/connect.html
@@ -57,8 +57,8 @@
 
       <a class="btn block w-full" href="https://carelay.net/" target="_blank" rel="noopener">
         <div class="w-full flex items-center gap-3 bg-gray-50 hover:bg-gray-100 border border-gray-200 rounded-2xl p-4 transition">
-          <span class="shrink-0 inline-flex w-10 h-10 items-center justify-center rounded-xl bg-waju-accent/10">
-            <svg viewBox="0 0 24 24" fill="none" class="w-6 h-6 text-waju-accent"><path stroke="currentColor" stroke-width="1.75" d="M12 2v6m0 8v6m6-10h6M0 12h6m11.314-6.686L14 8.627m-4 6.746-3.314 3.313m0-13.372L10 9.373m4 6.746 3.314 3.314"/></svg>
+          <span class="shrink-0 inline-flex w-10 h-10 items-center justify-center rounded-xl overflow-hidden bg-waju-accent/10">
+            <img src="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/carelayicon.png" alt="CARELAY icon" class="w-8 h-8 object-contain">
           </span>
           <div class="grow">
             <p class="font-semibold">CARELAY（ケアレイ）</p>
