--- a/connect.html
+++ b/connect.html
@@ -62,7 +62,7 @@
           </span>
           <div class="grow">
             <p class="font-semibold">CARELAY（ケアレイ）</p>
-            <p class="text-sm text-slate-500">業界の求人・連携をオンラインで</p>
+            <p class="text-sm text-slate-500">介護福祉業界の求人・連携をオンラインで</p>
           </div>
           <span class="chev text-slate-400 transition">→</span>
         </div>
